@@ -2,6 +2,7 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2020-06-16	Richard Forth	Added Dockerfile for CentOS7 testing.
 2020-03-27	Richard Forth	Closes #319.
                                 myip.dnsomatic.com Too Many Requests, error
 				suppression. 
